--- a/index2.html
+++ b/index2.html
@@ -1674,6 +1674,7 @@
 							{ "partMoving": "head", "directionMoving": "down" },
 							{ "partMoving": "head", "directionMoving": "up" }
 						];
+						console.log("Manual buffer set for Barking:", movementBuffer);
 						trackMovementSequences(); // Call the function to check the buffer
 					};
 				}
