--- a/index2.html
+++ b/index2.html
@@ -1670,6 +1670,8 @@
 					barkButton.onclick = () => {
 						// Manually create the desired sequence for "Barking"
 						movementBuffer = [
+							{ "partMoving": "none", "directionMoving": "none" },
+							{ "partMoving": "none", "directionMoving": "none" },
 							{ "partMoving": "head", "directionMoving": "up" },
 							{ "partMoving": "head", "directionMoving": "down" },
 							{ "partMoving": "head", "directionMoving": "up" }
