--- a/index2.html
+++ b/index2.html
@@ -737,7 +737,7 @@
 							}
 							previousPart = partMoving;
 							previousDirection = directionMoving;
-							trackMovementSequences();
+							//trackMovementSequences();
 						} else {
 							return;
 						}
