--- a/index2.html
+++ b/index2.html
@@ -1696,9 +1696,8 @@
 				if (jumpButton) {
 					jumpButton.onclick = () => {
 						movementBuffer = [
-						{ "partMoving": "front leg", "directionMoving": "up" },
-						{ "partMoving": "front leg", "directionMoving": "down" },
-						{ "partMoving": "head", "directionMoving": "up" }
+						{ "partMoving": "back leg", "directionMoving": "up" },
+						{ "partMoving": "front leg", "directionMoving": "up" }
 						];
 						trackMovementSequences(); // Call the function to check the buffer
 					};
