--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
 		<div id="avatarBTdiv">
 			<div class="top-section">
 				<!-- Listen Button (left half) -->
-				<button id="listenButton" class="button listen-button" onclick="forward_Sound.play(), wakeLock(),listenFunction()" disabled>
+				<button id="listenButton" class="button listen-button" onclick="forward_Sound.play(), wakeLock(),listenFunction()" style="visibility: hidden;">
 					disabled
 				</button>
 
