--- a/index2.html
+++ b/index2.html
@@ -299,6 +299,7 @@
 					// Update UI to reflect a "connected" state (even though it's simulated)
 					document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_connected</span> Disconnect Hachi (Simulated)';
 					isConnected = true;
+					speakFancy = true;
 					listenClient = false;
 					startDetectMovement = true;
 					blueToothStatus = "Online";
