--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@
 			let weatherDescription = null;
 
 			var noNarrative;
-			var speakFancy;
+			var speakFancy = true;
 
 			var previousTagID = 0 // Variable to store the previous tagID
 
