--- a/index2.html
+++ b/index2.html
@@ -845,7 +845,7 @@
 
 								clearTimeout(timeoutID);
 								speakMessage(fullMessage);
-								updateDisplay(fullMessage);
+								//updateDisplay(fullMessage);
 
 								if (audioSoundscape !== "") {
 									window[audioSoundscape + "_Sound"].play(); // Play the corresponding audio based on the audioSoundscape variable if it is not empty
