--- a/index2.html
+++ b/index2.html
@@ -846,7 +846,6 @@
 								clearTimeout(timeoutID);
 								speakMessage(fullMessage);
 								//updateDisplay(fullMessage);
-						
 
 								if (audioSoundscape !== "") {
 									window[audioSoundscape + "_Sound"].play(); // Play the corresponding audio based on the audioSoundscape variable if it is not empty
@@ -866,7 +865,7 @@
 
 								clearTimeout(timeoutID);
 								speakMessage(fullMessage);
-								updateDisplay(fullMessage);
+								//updateDisplay(fullMessage);
 								if (audioSoundscape !== "") {
 									window[audioSoundscape + "_Sound"].play(); // Play the corresponding audio based on the audioSoundscape variable if it is not empty
 								}
@@ -875,13 +874,13 @@
 							var fullMessage = message.substring(delimiterIndex + 1).trim(); // Extract the message text after the first delimiter
 							clearTimeout(timeoutID);
 							speakMessage(fullMessage);
-							updateDisplay(fullMessage);
+							//updateDisplay(fullMessage);
 						}
 					} else { // Handle the case where there's no delimiter at all
 						var fullMessage = message.trim(); // The full message is the entire input
 						clearTimeout(timeoutID);
 						speakMessage(fullMessage);
-						updateDisplay(fullMessage);
+						//updateDisplay(fullMessage);
 					}
 				}
 
